--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <p class="footer__copyright"> &copy; 2022 Mesto Russia</p>
     </footer>
     <!-- Попап -->
-    <section class="popup popup_opened">
+    <section class="popup">
         <div class="popup__container">
             <button class="button popup__button-close"></button>
             <form class="popup__form">
