--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <main class="content">
         <!-- Профиль -->
         <section class="profile">
-            <img src="images/profile/image.jpg" alt ="аватар профиля" class="profile__avatar">
+            <img src="images/profile/__avatar.jpg" alt ="аватар профиля" class="profile__avatar">
             <div class="profile__info">
                 <h1 id="profileName" class="profile__name">Жак-Ив Кусто</h1>
                 <p id="profileDescription" class="profile__description">Исследователь океана</p>
