--- a/index.html
+++ b/index.html
@@ -82,14 +82,14 @@
         <p class="footer__copyright"> &copy; 2022 Mesto Russia</p>
     </footer>
     <!-- Попап -->
-    <section id="popupButton" class="popup">
+    <section tabindex="0" id="popupButton" class="popup">
         <div class="popup__container">
-            <button id="popupClose" class="button popup__button-close"></button>
+            <button tabindex="4" id="popupClose" class="button popup__button-close"></button>
             <form class="popup__form">
                 <h2 class="popup__edit-profile">Редактировать профиль</h2>
-                <input required placeholder="Жак-Ив Кусто" class="popup__edit-name">
-                <input required  placeholder="Исследователь океана" class="popup__edit-description">
-                <button id="buttonSave" type="submit" class="popup__button-save button">Сохранить</button>
+                <input tabindex="1" required placeholder="Жак-Ив Кусто" class="popup__edit-name">
+                <input tabindex="2" required  placeholder="Исследователь океана" class="popup__edit-description">
+                <button tabindex="3" id="buttonSave" type="submit" class="popup__button-save button">Сохранить</button>
             </form>
         </div>
     </section>
