правки названий классов

--- a/index.html
+++ b/index.html
@@ -27,54 +27,42 @@
             <button type="button" class="profile__add-button button"></button>
         </section>
         <!-- Элементы -->
-        <ul class="elements">
+        <ul class="photo-grid">
             <!-- Карачаевск -->
-            <li>
-                <div class="elements-container">
-                    <img src="images/element/karachaevsk.jpg" alt="Карачаевск" class="element__image">
-                    <h2 class="element__title">Карачаевск</h2>
-                    <button id="buttonHeart1" class="button element__heart element__heart_button" title="Реактировать профиль"></button> 
-                </div>
+            <li class="card">
+                <img src="images/photo-grid/karachaevsk.jpg" alt="Карачаевск" class="card__image">
+                <h2 class="card__title">Карачаевск</h2>
+                <button id="buttonHeart1" class="button card__like card__like_button" title="Реактировать профиль"></button>
             </li>
             <!-- Гора Эльбрус -->
-            <li>
-                <div class="elements-container">
-                    <img src="images/element/gora-elbrus.jpg" alt="Гора Эльбрус" class="element__image">
-                    <h2 class="element__title">Гора Эльбрус</h2>
-                    <button id="buttonHeart2" class="button element__heart element__heart_button"></button> 
-                </div>
+            <li class="card">
+                <img src="images/photo-grid/gora-elbrus.jpg" alt="Гора Эльбрус" class="card__image">
+                <h2 class="card__title">Гора Эльбрус</h2>
+                <button id="buttonHeart2" class="button card__like card__like_button"></button> 
             </li>
             <!-- Домбай-->
-            <li>
-                <div class="elements-container">
-                    <img src="images/element/dombai.jpg" alt="Домбай" class="element__image">
-                    <h2 class="element__title">Домбай</h2>
-                    <button id="buttonHeart3" class="button element__heart element__heart_button"></button> 
-                </div>
+            <li class="card">
+                <img src="images/photo-grid/dombai.jpg" alt="Домбай" class="card__image">
+                <h2 class="card__title">Домбай</h2>
+                <button id="buttonHeart3" class="button card__like card__like_button"></button> 
             </li>    
             <!-- Гора Эльбрус -->
-            <li>
-                <div class="elements-container">
-                    <img src="images/element/gora-elbrus.jpg" alt="Гора Эльбрус" class="element__image">
-                    <h2 class="element__title">Гора Эльбрус</h2>
-                    <button id="buttonHeart4" class="button element__heart element__heart_button"></button> 
-                </div>
+            <li class="card">
+                <img src="images/photo-grid/gora-elbrus.jpg" alt="Гора Эльбрус" class="card__image">
+                <h2 class="card__title">Гора Эльбрус</h2>
+                <button id="buttonHeart4" class="button card__like card__like_button"></button> 
             </li>    
             <!-- Домбай -->
-            <li>
-                <div class="elements-container">
-                    <img src="images/element/dombai.jpg" alt="Домбай" class="element__image">
-                    <h2 class="element__title">Домбай</h2>
-                    <button id="buttonHeart5" class="button element__heart element__heart_button"></button> 
-                </div>
+            <li class="card">
+                <img src="images/photo-grid/dombai.jpg" alt="Домбай" class="card__image">
+                <h2 class="card__title">Домбай</h2>
+                <button id="buttonHeart5" class="button card__like card__like_button"></button> 
             </li>    
             <!-- Карачаево-Черкессия -->
-            <li>
-                <div class="elements-container">
-                    <img src="images/element/karachaevsk.jpg" alt="Карачаево-Черкессия" class="element__image">
-                    <h2 class="element__title">Карачаево-Черкессия</h2>
-                    <button id="buttonHeart6" class="button element__heart element__heart_button"></button> 
-                </div>
+            <li class="card">
+                <img src="images/photo-grid/karachaevsk.jpg" alt="Карачаево-Черкессия" class="card__image">
+                <h2 class="card__title">Карачаево-Черкессия</h2>
+                <button id="buttonHeart6" class="button card__like card__like_button"></button> 
             </li>
         </ul>
     </main>
