правки после ревью 1

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <li class="card">
                 <img src="images/photo-grid/gora-elbrus.jpg" alt="Гора Эльбрус" class="card__image">
                 <h2 class="card__title">Гора Эльбрус</h2>
-                <button type="button"" class="button card__like"></button> 
+                <button type="button" class="button card__like"></button> 
             </li>
             <!-- Домбай-->
             <li class="card">
