--- a/index.html
+++ b/index.html
@@ -24,53 +24,17 @@
                 <p  id= "profileDescription" class="profile__description">Исследователь океана</p>
                 <button type="button" class="button profile__edit-button"></button>
             </div>           
-            <button type="button" class="profile__add-button button"></button>
+            <button type="button" class="button profile__add-button"></button>
         </section>
         <!-- Элементы -->
-        <ul class="photo-grid">
-            <!-- Карачаевск -->
-            <li class="card">
-                <img src="images/photo-grid/karachaevsk.jpg" alt="Карачаевск" class="card__image">
-                <h2 class="card__title">Карачаевск</h2>
-                <button type="button" class="button card__like" title="Реактировать профиль"></button>
-            </li>
-            <!-- Гора Эльбрус -->
-            <li class="card">
-                <img src="images/photo-grid/gora-elbrus.jpg" alt="Гора Эльбрус" class="card__image">
-                <h2 class="card__title">Гора Эльбрус</h2>
-                <button type="button" class="button card__like"></button> 
-            </li>
-            <!-- Домбай-->
-            <li class="card">
-                <img src="images/photo-grid/dombai.jpg" alt="Домбай" class="card__image">
-                <h2 class="card__title">Домбай</h2>
-                <button type="button" class="button card__like"></button> 
-            </li>    
-            <!-- Гора Эльбрус -->
-            <li class="card">
-                <img src="images/photo-grid/gora-elbrus.jpg" alt="Гора Эльбрус" class="card__image">
-                <h2 class="card__title">Гора Эльбрус</h2>
-                <button type="button" class="button card__like"></button> 
-            </li>    
-            <!-- Домбай -->
-            <li class="card">
-                <img src="images/photo-grid/dombai.jpg" alt="Домбай" class="card__image">
-                <h2 class="card__title">Домбай</h2>
-                <button type="button" class="button card__like"></button> 
-            </li>    
-            <!-- Карачаево-Черкессия -->
-            <li class="card">
-                <img src="images/photo-grid/karachaevsk.jpg" alt="Карачаево-Черкессия" class="card__image">
-                <h2 class="card__title">Карачаево-Черкессия</h2>
-                <button type="button" class="button card__like"></button> 
-            </li>
-        </ul>
+        <section class="photo-grid">
+        </section>
     </main>
     <footer class="footer">
         <p class="footer__copyright"> &copy; 2022 Mesto Russia</p>
     </footer>
-    <!-- Попап -->
-    <section tabindex="0" id="popupButton" class="popup">
+    <!-- Попап редактирования профиля -->
+    <section tabindex="0" id="popupUser" class="popup popup_user">
         <div class="popup__container">
             <button type="button" tabindex="4" class="button popup__button-close"></button>
             <form name="edit-profile" class="popup__form">
@@ -81,7 +45,38 @@
             </form>
         </div>
     </section>
+    <!-- Попап добавления карточки -->
+    <section tabindex="0" id="popupCard" class="popup popup_card">
+        <div class="popup__container">
+            <button type="button" tabindex="4" class="button popup__button-close"></button>
+            <form name="form" class="popup__form">
+                <h2 class="popup__edit-profile">Новое место</h2>
+                <input tabindex="1" id="cardName" name="card-name" type="text" value required placeholder="Название" class="popup__edit-info">
+                <input tabindex="2" id="cardUrl" name="card-url" type="url" value required  placeholder="Ссылка на картинку" class="popup__edit-info">
+                <button type="submit" tabindex="3" class="popup__button-save button">Создать</button> 
+            </form>
+        </div>
+    </section>
 </div>
+    <!-- Добавление изображений в галерею -->
+    <template class="template">
+        <div class="card">
+          <button type="button" class="button card__delete"></button>
+          <img class="card__image" alt="" src="">
+          <h2 class="card__title"></h2>
+          <button type="button" class="button card__like"></button>
+        </div>
+      </template>
+<!-- Попап открытия изображений -->
+    <section id="popupImage" class="popup popup_type_image popup_image">
+        <div class="popup__container-image">
+          <figure class="popup__image-form" name="form-image">
+              <img class="popup__image-url" src=" " alt=" ">
+              <figcaption class="popup__image-name"></figcaption>
+              <button type="button" class="button popup__button-close"></button>
+          </figure>
+        </div>
+    </section>
 <script src="scripts/index.js"></script>
 </body>
 </html>
