--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <template class="template">
         <div class="card">
           <button type="button" class="button card__delete"></button>
-          <img class="card__image" alt="" src="">
+          <img class="card__image" alt="_" src="_">
           <h2 class="card__title"></h2>
           <button type="button" class="button card__like"></button>
         </div>
