--- a/index.html
+++ b/index.html
@@ -58,17 +58,8 @@
         </div>
     </section>
 </div>
-    <!-- Добавление изображений в галерею -->
-    <template class="template">
-        <div class="card">
-          <button type="button" class="button card__delete"></button>
-          <img class="card__image" alt="_" src="_">
-          <h2 class="card__title"></h2>
-          <button type="button" class="button card__like"></button>
-        </div>
-      </template>
 <!-- Попап открытия изображений -->
-    <section id="popupImage" class="popup popup_type_image popup_image">
+    <section id="popupImage" class="popup popup_image">
         <div class="popup__container-image">
           <figure class="popup__image-form" name="form-image">
               <img class="popup__image-url" src=" " alt=" ">
@@ -77,6 +68,16 @@
           </figure>
         </div>
     </section>
+<!-- Добавление изображений в галерею -->
+    <template class="template">
+        <div class="card">
+            <button type="button" class="button card__delete"></button>
+            <img class="card__image" alt="_" src="_">
+            <h2 class="card__title"></h2>
+            <button type="button" class="button card__like"></button>
+        </div>
+    </template>
+<script src="scripts/cards.js"></script>
 <script src="scripts/index.js"></script>
 </body>
 </html>
