--- a/index.html
+++ b/index.html
@@ -37,11 +37,19 @@
     <section tabindex="0" id="popupUser" class="popup popup_user">
         <div class="popup__container">
             <button type="button" tabindex="4" class="button popup__button-close"></button>
-            <form name="edit-profile" class="popup__form">
+            <form name="edit-profile" class="popup__form" novalidate>
                 <h2 class="popup__edit-profile">Редактировать профиль</h2>
-                <input tabindex="1" id="name" name="name" value required placeholder="Ваше имя" class="popup__edit-info">
-                <input tabindex="2" id="description" name="description" value required  placeholder="Ваш род деятельности" class="popup__edit-info">
-                <button type="submit" tabindex="3" class="popup__button-save button">Сохранить</button> 
+                <fieldset class="popup__form-set">
+                    <label class="popup__field">
+                        <input tabindex="1" id="name" type="text" name="name" minlength="2" maxlength="40" value required placeholder="Ваше имя" class="popup__edit-info">
+                        <span id="nameError" class="popup__error popup__error_visible"></span>
+                    </label>
+                    <label class="popup__field">
+                        <input tabindex="2" id="description" type="text" name="description" minlength="2" maxlength="200" value required  placeholder="Ваш род деятельности" class="popup__edit-info">
+                        <span id="descriptionError" class="popup__error popup__error_visible"></span>
+                    </label>
+                    <button type="submit" tabindex="3" class="popup__button-save button">Сохранить</button>
+                </fieldset>
             </form>
         </div>
     </section>
@@ -49,11 +57,19 @@
     <section tabindex="0" id="popupCard" class="popup popup_card">
         <div class="popup__container">
             <button type="button" tabindex="4" class="button popup__button-close"></button>
-            <form name="form" class="popup__form">
+            <form name="form" class="popup__form" novalidate>
                 <h2 class="popup__edit-profile">Новое место</h2>
-                <input tabindex="1" id="cardName" name="card-name" type="text" value required placeholder="Название" class="popup__edit-info">
-                <input tabindex="2" id="cardUrl" name="card-url" type="url" value required  placeholder="Ссылка на картинку" class="popup__edit-info">
-                <button type="submit" tabindex="3" class="popup__button-save button">Создать</button> 
+                <fieldset class="popup__form-set">
+                    <label class="popup__field">
+                        <input tabindex="1" id="cardName" name="card-name" type="text" minlength="2" maxlength="30" value required placeholder="Название" class="popup__edit-info">
+                        <span id="cardNameError" class="popup__error popup__error_visible"></span>
+                    </label>
+                    <label class="popup__field">
+                        <input tabindex="2" id="cardUrl" name="card-url" type="url" value required  placeholder="Ссылка на картинку" class="popup__edit-info">
+                        <span id="cardUrlError" class="popup__error popup__error_visible"></span>
+                    </label>
+                    <button type="submit" tabindex="3" class="popup__button-save popup__button-save_disabled button">Создать</button>
+                </fieldset>
             </form>
         </div>
     </section>
@@ -79,5 +95,6 @@
     </template>
 <script src="scripts/cards.js"></script>
 <script src="scripts/index.js"></script>
+<script src="scripts/validate.js"></script>
 </body>
 </html>
