--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         <input tabindex="2" id="cardUrl" name="card-url" type="url" value required  placeholder="Ссылка на картинку" class="popup__edit-info">
                         <span id="cardUrlError" class="popup__error popup__error_visible"></span>
                     </label>
-                    <button type="submit" tabindex="3" class="popup__button-save popup__button-save_disabled button">Создать</button>
+                    <button type="submit" tabindex="3" class="popup__button-save button" disabled>Создать</button>
                 </fieldset>
             </form>
         </div>
