--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <meta name="author" content="Юлия Струкова">
   <link rel="stylesheet" href="pages/index.css">
 </head>
-<body>
-  <div class="page">
+<body class="page">
+  <div>
   <!-- Шапка сайта, блок header -->
     <header class="header">
         <img src="images/header/__logo.svg" alt="логотип" class="header__logo">
