--- a/index.html
+++ b/index.html
@@ -93,8 +93,6 @@
             <button type="button" class="button card__like"></button>
         </div>
     </template>
-<script src="scripts/cards.js"></script>
-<script src="scripts/index.js"></script>
-<script src="scripts/validate.js"></script>
+<script type="module" src="./scripts/index.js"></script>
 </body>
 </html>
