--- a/index.html
+++ b/index.html
@@ -94,5 +94,7 @@
         </div>
     </template>
 <script type="module" src="./scripts/index.js"></script>
+<script type="module" src="./scripts/Cards.js" defer></script>
+<script type="module" src="./scripts/FormValidator.js" ></script>
 </body>
 </html>
