--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
             <button type="button" class="button card__like"></button>
         </div>
     </template>
+<script type="module" src="./scripts/data.js"></script>
 <script type="module" src="./scripts/index.js"></script>
 <script type="module" src="./scripts/Cards.js" defer></script>
 <script type="module" src="./scripts/FormValidator.js" ></script>
