--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     </template>
 <script type="module" src="./scripts/data.js"></script>
 <script type="module" src="./scripts/index.js"></script>
-<script type="module" src="./scripts/Cards.js" defer></script>
+<script type="module" src="./scripts/сards.js"></script>
 <script type="module" src="./scripts/FormValidator.js" ></script>
 </body>
 </html>
