--- a/src/index.html
+++ b/src/index.html
@@ -84,7 +84,7 @@
     </section>
 </div>
 <!-- Добавление изображений в галерею -->
-    <template class="template">
+    <template id="template" class="template">
         <div class="card">
             <button type="button" class="button card__delete"></button>
             <img class="card__image" alt="_" src="_">
