--- a/src/index.html
+++ b/src/index.html
@@ -56,7 +56,7 @@
         </div>
     </section>
     <!-- Попап редактирования изображения профиля -->
-    <section class="popup popup_avatar" id="popupAvatar">
+    <section tabindex="0" class="popup popup_avatar" id="popupAvatar">
         <div class="popup__container">
             <button type="button" tabindex="3" class="button popup__button-close"></button>
             <form class="popup__form" name="form" novalidate>
@@ -64,9 +64,9 @@
                 <fieldset class="popup__form-set">
                 <label class="popup__field">
                     <input tabindex="1" name="avatarUrl" type="url" id="avatarUrl" value required placeholder="Ссылка на картинку" class="popup__edit-info">
-                    <span id="avatarError" class="popup__error popup__error_visible">ррр</span>
+                    <span id="avatarUrlError" class="popup__error popup__error_visible"></span>
                 </label>
-                <button type="submit" tabindex="2" class="popup__button-save button" value="Сохранить">Сохранить</button>
+                <button type="submit" tabindex="2" class="popup__button-save button" value="Сохранить" disabled>Сохранить</button>
             </fieldset>
             </form>
         </div>
