--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,7 @@
     <section tabindex="0" class="popup popup_avatar" id="popupAvatar">
         <div class="popup__container">
             <button type="button" tabindex="3" class="button popup__button-close"></button>
-            <form class="popup__form" name="form" novalidate>
+            <form class="popup__form" name="form-avatar" novalidate>
                 <h2 class="popup__edit-profile">Обновить аватар</h2>
                 <fieldset class="popup__form-set">
                 <label class="popup__field">
